<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text1"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="351dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/text2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/text3"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchCompat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        android:textOff="@string/cm"
        android:textOn="@string/ft"
        app:switchTextAppearance="@style/SwitchTextAppearance"
        android:shadowColor="@color/grey"
        android:thumb="@drawable/thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:showText="true"
        app:thumbTextPadding="10dp"
        app:track="@drawable/track" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:visibility="visible">

            <RelativeLayout
                android:id="@+id/relative_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/profile_completion"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView3"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_30"
                        android:textColor="@color/light_mint"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/determinateBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="6dp"
                        android:layout_marginStart="10dp"
                        android:progress="30"
                        android:progressBackgroundTint="#dfe2e4"
                        android:progressTint="@color/light_mint" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/light_mint"
            android:text="@string/next"
            android:textSize="16sp"
            app:cornerRadius="30dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>